--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/jeffersonpenna/todo-list-backend#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
