--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,8 @@
       "@services/*": ["./src/services/*"],
       "@config/*": ["./src/config/*"]
     }
-  }
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
