--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "@prisma/client": "^3.14.0",
+    "dotenv": "^16.0.1",
+    "dotenv-cli": "^5.1.0",
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "pg": "^8.7.3"
   }
 }
