--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^28.1.0",
+    "prisma": "^3.14.0",
     "ts-jest": "^28.0.2",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^4.0.0",
