--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/node": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-typescript": "^7.16.7",
+    "@mermaid-js/mermaid-cli": "^9.0.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
@@ -38,6 +39,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^28.1.0",
     "prisma": "^3.14.0",
+    "prisma-erd-generator": "^0.11.3",
     "ts-jest": "^28.0.2",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^4.0.0",
