--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "dotenv-cli": "^5.1.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "joi": "^17.6.0",
     "pg": "^8.7.3",
     "pm2": "^5.2.0"
   }
