--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-typescript": "^7.16.7",
     "@mermaid-js/mermaid-cli": "^9.0.3",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
@@ -47,6 +48,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.14.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "dotenv-cli": "^5.1.0",
     "express": "^4.18.1",
