--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -57,6 +58,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
-    "pm2": "^5.2.0"
+    "pm2": "^5.2.0",
+    "uuid": "^8.3.2"
   }
 }
