--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
       "@constants/*": ["./src/constants/*"],
       "@utils/*": ["./src/utils/*"],
       "@validations/*": ["./src/validations/*"],
-    }
+      "@repositories/*": ["./src/repositories/*"]
+    },
   },
   "include": [
     "src/**/*"
