--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "@mermaid-js/mermaid-cli": "^9.0.3",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
     "@types/jsonwebtoken": "^8.5.8",
@@ -51,6 +52,7 @@
   "dependencies": {
     "@prisma/client": "^3.14.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "dotenv-cli": "^5.1.0",
     "express": "^4.18.1",
