--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "dotenv-cli": "^5.1.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "helmet": "^5.0.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
